// Copyright 2020 gorse Project Authors
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
// http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.
syntax = "proto3";

option go_package = "github.com/zhenghaoz/gorse/protocol";

package protocol;

service Worker {

  rpc BroadcastModel(Model) returns (Void) {}
  rpc BroadcastUserPartition(Partition) returns (Void) {}

  rpc GetModelVersion(Void) returns (Version) {}
  rpc GetUserPartitionVersion(Void) returns (Version) {}

}

message Model {
  Version version = 1;
  string name = 2;
  bytes model = 3;
}

message Void {

}

message Partition {
  Version version = 1;
  repeated string prefixes = 2;
}

message Version {
  int32 tag = 1;
  int32 term = 2;
}
